# myNotion

./: .gitignore  CHANGELOG.md  MyNotion.spec  README.md  inline-edit-playground.html  mynotion-theme-playground.html  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: TODO.md
.github/workflows/: ci.yml  release.yml
examples/: theme_test.py
scripts/: build.bat  install.bat  quality_check.bat  quality_check.sh
src/: app.py  main.py
src/ai/: __init__.py  completion.py  worker.py
src/ai/providers/: anthropic.py  ollama.py
src/core/: recent_files.py  settings.py
src/syntax/: __init__.py  highlighter.py
src/ui/: activity_bar.py  completion_controller.py  custom_tab_bar.py  editor_tab.py  file_browser.py  find_replace.py  inline_edit_controller.py  inline_edit_widget.py  main_window.py  settings_dialog.py  side_panel.py  status_bar_manager.py  theme_engine.py  title_bar.py  toolbar_widgets.py
tests/: __init__.py  conftest.py  test_ai_context.py  test_ai_prompts.py  test_ai_providers.py  test_ai_replace.py  test_ai_worker.py  test_auto_save.py  test_completion.py  test_editor.py  test_editor_tab.py  test_file_browser.py  test_find_replace.py  test_inline_edit.py  test_session_restore.py  test_smoke.py  test_theme_engine.py
